manifests/openshift.yaml
---
# Source: chart/templates/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: innabox
  name: fulfillment-database
spec:
  selector:
    app: fulfillment-database
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
---
# Source: chart/templates/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: innabox
  name: fulfillment-api
  labels:
    app: fulfillment-service
spec:

  selector:
    app: fulfillment-service
  ports:
  - name: api
    port: 8000
    targetPort: api
---
# Source: chart/templates/controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: innabox
  name: fulfillment-controller
spec:
  selector:
    matchLabels:
      app: fulfillment-controller
  replicas: 1
  template:
    metadata:
      labels:
        app: fulfillment-controller
    spec:
      serviceAccountName: controller
      volumes:
      - name: service-tls
        secret:
          secretName: fulfillment-service-tls
      containers:
      - name: controller
        image: ghcr.io/innabox/fulfillment-service:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: service-tls
          mountPath: /etc/fulfillment-service/tls
        command:
        - /usr/local/bin/fulfillment-service
        - start
        - controller
        - --log-level=debug
        - --log-headers=true
        - --log-bodies=true
        - --grpc-server-network=tcp
        - --grpc-server-address=fulfillment-api:8000
        - --grpc-token-file=/var/run/secrets/kubernetes.io/serviceaccount/token
        - --grpc-ca-file=/etc/fulfillment-service/tls/ca.crt
---
# Source: chart/templates/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: innabox
  name: fulfillment-service
spec:
  selector:
    matchLabels:
      app: fulfillment-service
  replicas: 1
  template:
    metadata:
      labels:
        app: fulfillment-service
    spec:
      volumes:
      - name: sockets
        emptyDir:
          medium: Memory
      - name: config
        configMap:
          name: fulfillment-service-config
      - name: cert
        secret:
          secretName: fulfillment-database-client-cert
      - name: envoy
        configMap:
          name: fulfillment-service-envoy
      - name: envoy-tls
        secret:
          secretName: fulfillment-service-tls
      containers:

      - name: server
        image: ghcr.io/innabox/fulfillment-service:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        - name: config
          mountPath: /etc/fulfillment-service
        - name: cert
          mountPath: /secrets/cert
        command:
        - /usr/local/bin/fulfillment-service
        - start
        - server
        - --log-level=debug
        - --log-headers=true
        - --log-bodies=true
        - "--db-url=postgres://client@fulfillment-database:5432/service?\
          sslmode=verify-full&\
          sslcert=/secrets/cert/tls.crt&\
          sslkey=/secrets/cert/tls.key&\
          sslrootcert=/secrets/cert/ca.crt"
        - --grpc-listener-network=unix
        - --grpc-listener-address=/run/sockets/server.socket
        - --grpc-authn-type=jwks
        - --grpc-authn-jwks-url=https://kubernetes.default.svc/openid/v1/jwks
        - --grpc-authn-jwks-ca-file=/run/secrets/kubernetes.io/serviceaccount/ca.crt
        - --grpc-authn-jwks-token-file=/run/secrets/kubernetes.io/serviceaccount/token
        - --grpc-authz-type=rules
        - --grpc-authz-rules-file=/etc/fulfillment-service/rules.yaml

      - name: gateway
        image: ghcr.io/innabox/fulfillment-service:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        command:
        - /usr/local/bin/fulfillment-service
        - start
        - gateway
        - --log-level=debug
        - --log-headers=true
        - --log-bodies=true
        - --http-listener-network=unix
        - --http-listener-address=/run/sockets/gateway.socket
        - --grpc-server-network=unix
        - --grpc-server-address=/run/sockets/server.socket
        - --grpc-server-plaintext

      - name: envoy
        image: docker.io/envoyproxy/envoy:v1.33.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: sockets
          mountPath: /run/sockets
        - name: envoy
          mountPath: /etc/envoy
        - name: envoy-tls
          mountPath: /etc/envoy/tls
        command:
        - envoy
        - --config-path
        - /etc/envoy/envoy.yaml
        ports:
        - name: api
          protocol: TCP
          containerPort: 8000
---
# Source: chart/templates/database/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: innabox
  name: fulfillment-database
spec:
  selector:
    matchLabels:
      app: fulfillment-database
  replicas: 1
  template:
    metadata:
      labels:
        app: fulfillment-database
    spec:
      volumes:
      - name: server-cert
        secret:
          secretName: fulfillment-database-server-cert
          defaultMode: 0440
      - name: server-config
        configMap:
          name: fulfillment-database-server
      - name: access-config
        configMap:
          name: fulfillment-database-access
      - name: data
        persistentVolumeClaim:
          claimName: fulfillment-database
      containers:
      - name: server
        image: quay.io/sclorg/postgresql-15-c9s:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /var/lib/pgsql/data
        - name: server-cert
          mountPath: /secrets/cert
        - name: server-config
          mountPath: /opt/app-root/src/postgresql-cfg
        - name: access-config
          mountPath: /config/access
        ports:
        - name: postgres
          protocol: TCP
          containerPort: 5432
---
# Source: chart/templates/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fulfillment-api
spec:
  to:
    kind: Service
    name: fulfillment-api
  port:
    targetPort: api
  tls:
    termination: passthrough
